--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,29 @@
 body {
     @apply text-mainText;
 }
+
+h1 {
+    @apply text-6xl;
+}
+
+h2 {
+    @apply text-4xl;
+}
+
+h3 {
+    @apply text-2xl;
+}
+
+progress[value] {
+    width: 100%;
+    height: 0.25rem;
+}
+
+progress[value]::-webkit-progress-bar {
+    @apply bg-mainBG rounded;
+}
+
+progress[value]::-webkit-progress-value {
+    @apply bg-mainAccent rounded-sm;
+    margin-top: -10px;
+}
