--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 body {
-    @apply text-mainText;
+    @apply text-black;
 }
 
 h1 {
-    @apply text-6xl;
+    @apply text-5xl;
 }
 
 h2 {
